# sample-aws-techbot

./: .gitignore  Dockerfile  README.md  README_EN.md  aws-techbot-architecture-diagram  gateway_cognito.py  main.py  model_provider.py  pyproject.toml  threat-model.json  threat-model.md
deploy/: build-and-upload.sh  build-layer.sh  template.yaml
deploy/lambda/gateway-targets/aws-operations/: index.py  requirements.txt
deploy/lambda/gateway-targets/china-knowledge/: index.py
deploy/lambda/gateway-targets/customer-stories/: index.py
deploy/lambda/gateway-targets/global-knowledge/: index.py  requirements.txt
deploy/lambda/gateway-targets/kiro-knowledge/: index.py
deploy/lambda/gateway-targets/pricing/: index.py  requirements.txt
deploy/lambda/worker/: index.py
deploy/targets/china-knowledge/: requirements.txt
deploy/targets/customer-stories/: index.py
deploy/targets/global-knowledge/: index.py
docs/: feishu-setup-zh.md  usage-guide-zh.md
