[project]
name = "techbot"
version = "0.1.0"
description = "AI Agent with dynamic skill loading - supports MCP servers (HTTP/stdio) and local tools"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "strands-agents[anthropic]>=1.13.0",
    "strands-agents-tools>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]
